@@ -1,6 +1,6 @@
-FROM debian:buster-20190204
+FROM debian:buster-20190228
 MAINTAINER Knot Resolver <knot-resolver@labs.nic.cz>
-ARG KNOT_BRANCH=2.7
+ARG KNOT_BRANCH=2.8
 
 WORKDIR /root
 CMD ["/bin/bash"]
